<resources>
    <string name="app_name">kotlin_messenger</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="need_a_new_account">Need a new account?</string>
    <string name="register">Register</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log in</string>
    <string name="select_photo">Select photo</string>
    <string name="sign_out">Sign out</string>
    <string name="new_message">New Message</string>
    <string name="this_will_say_user_s_name">This will say user\'s name</string>
    <string name="send">Send</string>
    <string name="enter_message">Enter message</string>
    <string name="chat_text_here">Chat text here</string>
    <string name="preview_of_the_chat_message">Preview of the chat message</string>
</resources>
